syntax = "proto3";
package CIS.InternalServices.ServiceDiscovery;

option csharp_namespace = "CIS.InternalServices.ServiceDiscovery.Contracts";

message DiscoverableService {
   string ServiceName = 1;
   string ServiceUrl = 2;
   ServiceTypes ServiceType = 3;
}

message GetServiceRequest {
   string Environment = 1;
   string ServiceName = 2;
   ServiceTypes ServiceType = 3;
}
message GetServiceResponse {
   DiscoverableService Service = 1;
   string EnvironmentName = 2;
}
message GetServicesRequest {
   string Environment = 1;
   ServiceTypes ServiceType = 2;
}
message GetServicesResponse {
   repeated DiscoverableService Services = 1;
   string EnvironmentName = 2;
}

message ClearCacheRequest {
}

enum ServiceTypes {
   Unknown = 0;
   Grpc = 1;
   Rest = 2;
   Proprietary = 3;
}